# semantica

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEVELOPMENT_GUIDE.md  GRANT_APPLICATION.md  LICENSE  Modules.md  PR_CONTEXT.md  PR_DESCRIPTION.md  PR_DESCRIPTION_context.md  README.md  RELEASE.md  REPO_STRUCTURE.md  ROADMAP.md  SECURITY.md  SUPPORT.md  Update_Readme.md  black_error.txt  convert_html_to_pdf.bat  convert_to_pdf_guide.txt  convert_to_pdf_simple.py  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-docs.txt  simple_test.py  test_output.txt  test_output_2.txt
.github/: FUNDING.yml  SUPPORT.md  dependabot.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: general.md  ideas.md  qa.md  show-and-tell.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  grant.md  support.md
.github/workflows/: benchmark.yml  ci.yml  docs.yml  format.yml  release.yml  security.yml
attachments/: CONVERSION_INSTRUCTIONS.txt  README.txt  architecture_diagrams.html  budget_breakdown.txt  community_engagement_plan.html  comparison_matrix.html  detailed_roadmap.html  performance_benchmarks.html  technical_specification.html  use_cases.html
benchmarks/: BENCHMARK_RESULTS.md  DETAILED_RESULTS.md  PERFORMANCE_SUMMARY.md  README.md  conftest.py
benchmarks/quality_assurance/: test_deduplication.py
benchmarks/results/: run_20260207_13_22_18.json  run_20260207_13_45_38.json
cookbook/advanced/: 01_Advanced_Extraction.ipynb  02_Advanced_Graph_Analytics.ipynb  03_Complete_Visualization_Suite.ipynb  05_Multi_Format_Export.ipynb  06_Multi_Source_Data_Integration.ipynb  08_Reasoning_and_Inference.ipynb  09_Semantic_Layer_Construction.ipynb  10_Temporal_Knowledge_Graphs.ipynb  12_Unstructured_to_Ontology.ipynb  knowledge_graph.ttl
cookbook/introduction/: 01_Welcome_to_Semantica.ipynb  04_Data_Normalization.ipynb  05_Entity_Extraction.ipynb  06_Relation_Extraction.ipynb  07_Building_Knowledge_Graphs.ipynb  08_Your_First_Knowledge_Graph.ipynb  09_Graph_Store.ipynb  10_Graph_Analytics.ipynb  11_Chunking_and_Splitting.ipynb  12_Embedding_Generation.ipynb  13_Vector_Store.ipynb  14_Ontology.ipynb  15_Export.ipynb  16_Visualization.ipynb  17_Conflict_Detection.ipynb  17_Conflict_Detection_and_Resolution.ipynb  18_Deduplication.ipynb  20_Triple_Store.ipynb  20_Triplet_Store.ipynb  21_Amazon_Neptune_Store.ipynb  config.yaml  neptune-setup.yaml
docs/: CodeExamples.md  LIBS_README.md  Makefile  README.md  architecture.md  citation.md  community-projects.md  community.md  concepts.md  conf.py  cookbook.md  deep-dive.md  examples.md  examples.rst  faq.md  getting-started.md  getting_started.rst  glossary.md  governance.md  index.md  index.rst  installation.md  learning-more.md  license.md  modules.md  quickstart.md  requirements.txt  use-cases.md
docs/api/: index.rst
docs/css/: custom.css
docs/integrations/: snowflake_ingestion.md
docs/js/: version-selector.js
docs/reference/: conflicts.md  context.md  embeddings.md  evals.md  export.md  graph_store.md  kg.md  ontology.md  parse.md  pipeline.md  reasoning.md  seed.md  semantic_extract.md  triple_store.md  utils.md  vector_store.md  visualization.md
docs/tutorials/: quick_start.rst
examples/: capability_gap_context_graphs_example.py
libs/: README.md  pyproject.toml
libs/semantica/: __init__.py
scripts/: build_docs.py
semantica/: __init__.py
semantica/conflicts/: __init__.py  config.py  conflict_analyzer.py  conflict_detector.py  conflict_resolver.py  conflicts_usage.md  investigation_guide.py  methods.py  registry.py  source_tracker.py
semantica/context/: __init__.py  agent_context.py  agent_memory.py  config.py  context_graph.py  context_retriever.py  context_usage.md  decision_methods.py  decision_models.py  decision_query.py  decision_recorder.py  entity_linker.py  graph_schema.py  methods.py  policy_engine.py  registry.py
semantica/core/: __init__.py  config_manager.py  lifecycle.py  methods.py  orchestrator.py  plugin_registry.py  registry.py
semantica/deduplication/: __init__.py  cluster_builder.py  config.py  deduplication_usage.md  duplicate_detector.py  entity_merger.py  merge_strategy.py  methods.py  registry.py  similarity_calculator.py
semantica/embeddings/: __init__.py  audio_embedder.py  context_manager.py  embedding_generator.py  embedding_optimizer.py  embeddings_usage.md  image_embedder.py  methods.py  multimodal_embedder.py  provider_adapters.py  provider_stores.py  registry.py  text_embedder.py
semantica/evals/: __init__.py
semantica/export/: __init__.py  arrow_exporter.py  config.py  csv_exporter.py  export_usage.md  graph_exporter.py  json_exporter.py  lpg_exporter.py  methods.py  owl_exporter.py  parquet_exporter.py  rdf_exporter.py  registry.py  report_generator.py  vector_exporter.py  yaml_exporter.py
semantica/graph_store/: __init__.py  config.py  falkordb_store.py  graph_store.py  graph_store_usage.md  neo4j_store.py
semantica/ingest/: __init__.py  api_ingestor.py  db_ingestor.py  duckdb_ingestor.py  elastic_ingestor.py  email_ingestor.py  feed_ingestor.py  file_ingestor.py  gdrive_ingestor.py  huggingface_ingestor.py  mcp_client.py  mcp_ingestor.py  methods.py  mongo_ingestor.py  pandas_ingestor.py  repo_ingestor.py  snowflake_ingestor.py  stream_ingestor.py  web_ingestor.py
semantica/kg/: __init__.py  centrality_calculator.py  community_detector.py  conflict_detector.py  connectivity_analyzer.py  deduplicator.py  entity_resolver.py  graph_analyzer.py  graph_builder.py  graph_validator.py  kg_usage.md  link_predictor.py  methods.py  node_embeddings.py  provenance_tracker.py  registry.py  seed_manager.py  (+1 more)
tests/: test_all_features.py  test_export_module.py  test_graph_store.py  test_notebook_15_export.py  test_notebooks_simulation.py  test_notebooks_verification.py  test_parquet_exporter.py  test_semantic_extract_deepdive.py  test_semantic_extract_deepdive_part2.py  test_semantic_extract_triples.py  test_snowflake_ingestor.py  verify_backends.py
(+253 files in other folders)
