[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semanticore"
version = "0.1.0"
description = "Open Source Semantic Layer Toolkit - Transform any unstructured data into intelligent knowledge graphs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SemantiCore Team", email = "team@semanticore.io"}
]
maintainers = [
    {name = "SemantiCore Team", email = "team@semanticore.io"}
]
keywords = [
    "semantic", "nlp", "knowledge-graph", "ai", "machine-learning",
    "data-processing", "embeddings", "ontology", "rdf", "sparql"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

requires-python = ">=3.8"
dependencies = [
    # Core dependencies
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.1.0",
    "pydantic>=1.10.0",
    "typing-extensions>=4.0.0",
    
    # NLP and ML
    "transformers>=4.20.0",
    "torch>=1.12.0",
    "sentence-transformers>=2.2.0",
    "spacy>=3.4.0",
    "nltk>=3.8",
    
    # Semantic Web
    "rdflib>=6.2.0",
    "owlready2>=0.44",
    "pyshacl>=0.20.0",
    
    # Data processing
    "openpyxl>=3.0.10",
    "python-docx>=0.8.11",
    "python-pptx>=0.6.21",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.7.0",
    "feedparser>=6.0.0",
    "selenium>=4.0.0",
    "requests-html>=0.10.0",
    
    # Vector databases
    "faiss-cpu>=1.7.0",
    "chromadb>=0.4.0",
    "pinecone-client>=2.2.0",
    
    # Graph databases
    "neo4j>=5.0.0",
    "pymongo>=4.0.0",
    "redis>=4.0.0",
    
    # Streaming and async
    "aiohttp>=3.8.0",
    "asyncio-mqtt>=0.11.0",
    "kafka-python>=2.0.0",
    
    # Utilities
    "python-multipart>=0.0.5",
    "python-dateutil>=2.8.0",
    "pytz>=2022.1",
    "tqdm>=4.64.0",
    "click>=8.0.0",
    "rich>=12.0.0",
]

[project.optional-dependencies]
# Document processing
pdf = [
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.7.0",
    "pdf2image>=1.16.0",
    "pymupdf>=1.22.0",
]
office = [
    "python-docx>=0.8.11",
    "openpyxl>=3.0.10",
    "python-pptx>=0.6.21",
    "xlrd>=2.0.1",
]
text = [
    "markdown>=3.4.0",
    "rst2html5>=1.0.0",
    "asciidoc>=10.0.0",
]

# Web processing
web = [
    "selenium>=4.0.0",
    "feedparser>=6.0.0",
    "requests-html>=0.10.0",
    "scrapy>=2.5.0",
    "newspaper3k>=0.2.8",
]
feeds = [
    "feedparser>=6.0.0",
    "requests-html>=0.10.0",
    "aiohttp>=3.8.0",
]

# Structured data
structured = [
    "openpyxl>=3.0.10",
    "xlrd>=2.0.1",
    "pyyaml>=6.0",
    "xmltodict>=0.13.0",
    "jsonschema>=4.0.0",
]

# Email and archives
email = [
    "email-validator>=1.3.0",
    "extract-msg>=0.41.0",
    "pypff>=20220101",
]
archives = [
    "patool>=1.12.0",
    "py7zr>=0.20.0",
    "rarfile>=4.0",
]

# Academic and scientific
academic = [
    "bibtexparser>=1.4.0",
    "scholarly>=1.7.0",
    "arxiv>=1.4.0",
    "crossref-commons>=0.0.7",
]

# Database integrations
database = [
    "neo4j>=5.0.0",
    "pymongo>=4.0.0",
    "redis>=4.0.0",
    "sqlalchemy>=1.4.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.0.0",
]
graphdb = [
    "neo4j>=5.0.0",
    "py2neo>=2021.0.0",
    "gremlinpython>=3.6.0",
    "amazon-neptune-python-utils>=1.0.0",
]

# Vector stores
vector = [
    "faiss-cpu>=1.7.0",
    "chromadb>=0.4.0",
    "pinecone-client>=2.2.0",
    "weaviate-client>=3.15.0",
    "qdrant-client>=1.1.0",
    "milvus>=2.2.0",
]

# Machine learning
ml = [
    "sentence-transformers>=2.2.0",
    "transformers>=4.20.0",
    "torch>=1.12.0",
    "tensorflow>=2.10.0",
    "scikit-learn>=1.1.0",
    "spacy>=3.4.0",
    "nltk>=3.8",
    "gensim>=4.2.0",
]

# Streaming and real-time
streaming = [
    "kafka-python>=2.0.0",
    "pika>=1.3.0",
    "aiohttp>=3.8.0",
    "websockets>=10.0",
    "asyncio-mqtt>=0.11.0",
]

# Deployment and scaling
deployment = [
    "kubernetes>=26.0.0",
    "docker>=6.0.0",
    "prometheus-client>=0.14.0",
    "grafana-api>=1.0.3",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.8.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "pre-commit>=2.20.0",
    "tox>=3.25.0",
    "coverage>=6.0.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
]

# Documentation
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.19.0",
    "myst-parser>=0.18.0",
    "sphinx-copybutton>=0.5.0",
]

# Testing
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.8.0",
    "pytest-benchmark>=4.0.0",
    "factory-boy>=3.2.0",
    "faker>=18.0.0",
]

# All optional dependencies
all = [
    "semanticore[pdf,office,text,web,feeds,structured,email,archives,academic,database,graphdb,vector,ml,streaming,deployment]"
]

[project.urls]
Homepage = "https://semanticore.io"
Documentation = "https://semanticore.readthedocs.io"
Repository = "https://github.com/semanticore/semanticore"
"Bug Tracker" = "https://github.com/semanticore/semanticore/issues"
Discussions = "https://github.com/semanticore/semanticore/discussions"
Discord = "https://discord.gg/semanticore"
Twitter = "https://twitter.com/semanticore"
Blog = "https://blog.semanticore.io"

[project.scripts]
semanticore = "semanticore.cli:main"

[project.gui-scripts]
semanticore-gui = "semanticore.gui:main"

[tool.setuptools]
packages = ["semanticore"]

[tool.setuptools.package-data]
semanticore = ["py.typed", "*.pyi"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["semanticore"]
known_third_party = ["pytest", "numpy", "pandas", "torch", "transformers"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "transformers.*",
    "spacy.*",
    "nltk.*",
    "selenium.*",
    "scrapy.*",
    "kafka.*",
    "pika.*",
    "redis.*",
    "pymongo.*",
    "neo4j.*",
    "faiss.*",
    "chromadb.*",
    "pinecone.*",
    "weaviate.*",
    "qdrant.*",
    "milvus.*",
    "prometheus_client.*",
    "grafana_api.*",
    "kubernetes.*",
    "docker.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "performance: marks tests as performance tests",
]

[tool.coverage.run]
source = ["semanticore"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "*/\.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101", "B601"]

[tool.safety]
output = "json" 